--- a/global-fairy/src/components/PurshaseButtons/PurshaseButtons.module.css
+++ b/global-fairy/src/components/PurshaseButtons/PurshaseButtons.module.css
@@ -8,7 +8,7 @@
   color: #000;
   font-size: 16px;
   display: flex;
-  width: 30%;
+  width: 25%;
   height: 65px;
   padding: 16px 15px;
   justify-content: space-between;
@@ -34,7 +34,7 @@
   cursor: pointer;
 }
 .addToCard {
-  width: 50%;
+  width: 60%;
   height: 65px;
   padding: 16px 54px;
   flex-shrink: 0;
@@ -67,7 +67,6 @@
 @media (max-width: 992px) {
   .purshaseButtons {
     justify-content: center;
-    margin-top: 20px;
     width: 100%;
   }
 }
